improved sidebar menu

--- a/src/modules/accounts/components/account/account.html
+++ b/src/modules/accounts/components/account/account.html
@@ -1,4 +1,4 @@
-<md-content layout-padding style="height: calc(100% - 16px)">
+<md-content layout-padding layout="column" flex>
     <mb-account-filter-bar></mb-account-filter-bar>
     <mb-account-order-bar></mb-account-order-bar>
     <mb-transition transition="transition" ng-repeat="transition in $ctrl.account.transitions"></mb-transition>
