--- a/src/modules/application/components/application/application.html
+++ b/src/modules/application/components/application/application.html
@@ -1,7 +1,9 @@
 <div layout="row" layout-fill flex>
     <mb-menu flex="20"></mb-menu>
-    <div layout="column" flex="80">
-        <mb-nav-bar></mb-nav-bar>
-        <ui-view style="height: calc(100% - 64px)"></ui-view>
+    <div flex="80">
+        <div layout="column" layout-fill>
+            <mb-nav-bar></mb-nav-bar>
+            <ui-view layout="column" flex></ui-view>
+        </div>
     </div>
 </div>
