--- a/src/modules/accounts/components/transition/transition.html
+++ b/src/modules/accounts/components/transition/transition.html
@@ -11,7 +11,7 @@
     <div flex="20">
         <div layout="column" layout-align="center center">
             <div flex="80">
-                <h1>{{$ctrl.transition.amount | currency:'€':2}}</h1>
+                <h1>{{$ctrl.transition.balance | currency:'€':2}}</h1>
             </div>
             <div flex="20">
                 <md-button>Edit</md-button>
