--- a/src/modules/application/components/application/application.html
+++ b/src/modules/application/components/application/application.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-fill flex>
-    <mb-menu flex="20"></mb-menu>
-    <div flex="80">
+    <mb-menu class="mb-sidenav-bar"></mb-menu>
+    <div flex>
         <div layout="column" layout-fill>
             <mb-nav-bar></mb-nav-bar>
             <ui-view layout="column" flex></ui-view>
