improved account dialog box

--- a/src/modules/application/components/menu/menu.html
+++ b/src/modules/application/components/menu/menu.html
@@ -11,7 +11,7 @@
             </a>
         </div>
         <div class="mb-menu-accounts">
-            <md-button class="mb-menu-new-account">
+            <md-button ng-click="$ctrl.newAccount($event)" class="mb-menu-new-account">
                 <i class="fa fa-plus" aria-hidden="true"></i>
                 <md-tooltip md-direction="bottom">New account</md-tooltip>
             </md-button>
