improved account edit and remove procedure

--- a/src/modules/application/components/navbar/navbar.html
+++ b/src/modules/application/components/navbar/navbar.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools">
         <span flex></span>
         <h2>
-            <span>{{$ctrl.currentState}}</span>
+            <span>Accounts - {{$ctrl.currentState}}</span>
         </h2>
         <span flex></span>
         <md-fab-speed-dial class="md-fling" md-direction="left">
