--- a/src/modules/accounts/components/account-dialog/account-dialog.html
+++ b/src/modules/accounts/components/account-dialog/account-dialog.html
@@ -1,9 +1,9 @@
-<form name="newAccountForm">
+<form name="accountForm">
     <md-dialog-content>
         <div class="md-dialog-content">
             <md-input-container class="md-block">
                 <label>Account Name</label>
-                <input ng-model="$ctrl.account.label">
+                <input ng-model="$ctrl.account.label" required>
             </md-input-container>
         </div>
     </md-dialog-content>
@@ -12,7 +12,7 @@
         <md-button ng-click="$ctrl.cancel()">
             Cancel
         </md-button>
-        <md-button ng-click="$ctrl.save()">
+        <md-button ng-disabled="!accountForm.$valid" ng-click="$ctrl.save()">
             Create
         </md-button>
     </md-dialog-actions>
